--- a/res/xml/device_info_settings.xml
+++ b/res/xml/device_info_settings.xml
@@ -17,6 +17,19 @@
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
         android:title="@string/about_settings">
 
+        <!-- Pure Logo Header -->
+        <Preference android:key="logo"
+            android:enabled="false"
+            android:shouldDisableView="false"
+            android:layout="@layout/about_logo"/>
+
+        <!-- PureNexus about -->
+        <PreferenceScreen
+            android:key="about_nexus"
+            android:fragment="com.android.settings.nexus.About"
+            android:title="@string/nexus_about"
+            android:summary="@string/nexus_about_summary" />
+
         <!-- Device status - launches activity -->
         <PreferenceScreen android:key="status_info"
                 android:title="@string/device_status"
